# rpi_ws281x

./: .gitignore  Makefile.am  autogen.sh  configure.ac  pkg-config.pc.in
src/: Makefile.am  libws2811.la  libws2811.pc  libws2811.pc.in  main.c
